design: fix vertical align in paging

--- a/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/in/paging.less
+++ b/project-base/src/SS6/ShopBundle/Resources/styles/admin/components/in/paging.less
@@ -5,6 +5,7 @@
 
 	&__item {
 		display: inline-block;
+		vertical-align: top;
 		margin: 0 1px;
 
 		a, strong, span {
